<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2016, WSO2 Inc. (http://wso2.com) All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.wso2</groupId>
        <artifactId>wso2</artifactId>
        <version>4</version>
    </parent>

    <groupId>org.wso2.carbon.security.userstore</groupId>
    <artifactId>org.wso2.carbon.security.userstore.jdbc.parent</artifactId>
    <packaging>pom</packaging>
    <name>WSO2 Carbon Security JDBC User Store - Parent</name>
    <version>1.0.0-SNAPSHOT</version>

    <scm>
        <url>https://github.com/wso2-extensions/carbon-security-user-store-jdbc.git</url>
        <developerConnection>scm:git:https://github.com/wso2-extensions/carbon-security-user-store-jdbc.git
        </developerConnection>
        <connection>scm:git:https://github.com/wso2-extensions/carbon-security-user-store-jdbc.git</connection>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>components/jdbc-connector</module>
        <module>feature</module>
        <module>tests</module>
    </modules>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
            </extension>
        </extensions>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.wso2.carbon.maven</groupId>
                    <artifactId>carbon-feature-plugin</artifactId>
                    <version>${carbon.feature.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <configuration>
                        <preparationGoals>clean install</preparationGoals>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>docs</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>javadoc</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.wso2.carbon.security.caas</groupId>
                <artifactId>org.wso2.carbon.security.caas</artifactId>
                <version>${carbon.security.caas.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.security.userstore</groupId>
                <artifactId>org.wso2.carbon.security.userstore.jdbc</artifactId>
                <version>${carbon.security.userstore.jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.jndi</groupId>
                <artifactId>org.wso2.carbon.jndi</artifactId>
                <version>${carbon.jndi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.datasources</groupId>
                <artifactId>org.wso2.carbon.datasource.core</artifactId>
                <version>${carbon.datasources.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.api.version}</version>
            </dependency>

            <!-- OSGI Tests-->
            <dependency>
                <groupId>net.minidev.wso2</groupId>
                <artifactId>json-smart</artifactId>
                <version>${json.smart.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.orbit.com.nimbusds</groupId>
                <artifactId>nimbus-jose-jwt</artifactId>
                <version>${nimbus.version}</version>
            </dependency>

            <dependency>
                <groupId>org.wso2.carbon</groupId>
                <artifactId>osgi-test-util</artifactId>
                <version>${carbon.kernel.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ops4j.pax.exam</groupId>
                <artifactId>pax-exam</artifactId>
                <version>${pax.exam.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ops4j.pax.exam</groupId>
                <artifactId>pax-exam-container-native</artifactId>
                <version>${pax.exam.container.native.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ops4j.pax.exam</groupId>
                <artifactId>pax-exam-testng</artifactId>
                <version>${pax.exam.testng.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ops4j.pax.exam</groupId>
                <artifactId>pax-exam-link-mvn</artifactId>
                <version>${pax.exam.link.mvn.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ops4j.pax.url</groupId>
                <artifactId>pax-url-aether</artifactId>
                <version>${pax.url.aether.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jacoco</groupId>
                <artifactId>org.jacoco.ant</artifactId>
                <version>${org.jacoco.ant.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.spec.ee</groupId>
                <artifactId>ow2-jta-1.1-spec</artifactId>
                <version>${ow2.jta.spec.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jacoco</groupId>
                <artifactId>org.jacoco.agent</artifactId>
                <classifier>runtime</classifier>
                <version>${jacoco.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.inject</groupId>
                <artifactId>javax.inject</artifactId>
                <version>${javax.inject.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon</groupId>
                <artifactId>carbon-kernel-osgi-test-util</artifactId>
                <version>${carbon.kernel.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>commons-dbcp</groupId>
                <artifactId>commons-dbcp</artifactId>
                <version>${commons.dbcp.version}</version>
            </dependency>
            <dependency>
                <groupId>net.minidev</groupId>
                <artifactId>asm</artifactId>
                <version>${net.minidev.asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.messaging</groupId>
                <artifactId>org.wso2.carbon.messaging</artifactId>
                <version>${org.wso2.carbon.messaging.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io.wso2</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.wso2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>${com.zaxxer.hikaricp.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${com.h2database.h2.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <properties>
        <carbon.jndi.version>1.0.0-alpha</carbon.jndi.version>
        <carbon.datasources.version>1.0.0-SNAPSHOT</carbon.datasources.version>
        <carbon.security.caas.version>1.0.0-SNAPSHOT</carbon.security.caas.version>
        <carbon.security.userstore.jdbc.version>1.0.0-SNAPSHOT</carbon.security.userstore.jdbc.version>
        <org.wso2.carbon.messaging.version>1.0.2</org.wso2.carbon.messaging.version>
        <carbon.feature.plugin.version>2.0.1</carbon.feature.plugin.version>
        <slf4j.api.version>1.7.12</slf4j.api.version>

        <!-- OSGI Test related -->

        <netty.version>4.0.30.Final</netty.version>
        <nimbus.version>2.26.1.wso2v3</nimbus.version>
        <json.smart.version>2.1.0.wso2v1</json.smart.version>
        <slf4j.api.version>1.7.12</slf4j.api.version>
        <rs-api.version>2.0</rs-api.version>
        <gson.version>2.2.4</gson.version>
        <net.minidev.asm.version>1.0.2</net.minidev.asm.version>
        <carbon.kernel.version>5.1.0-alpha2</carbon.kernel.version>

        <testng.version>6.9.4</testng.version>
        <pax.exam.version>4.6.0</pax.exam.version>
        <pax.exam.container.native.version>4.6.0</pax.exam.container.native.version>
        <pax.exam.testng.version>4.6.0</pax.exam.testng.version>
        <pax.exam.link.mvn.version>4.6.0</pax.exam.link.mvn.version>
        <pax.url.aether.version>1.6.0</pax.url.aether.version>
        <org.jacoco.ant.version>0.7.5.201505241946</org.jacoco.ant.version>
        <maven.paxexam.plugin.version>1.2.4</maven.paxexam.plugin.version>
        <ow2.jta.spec.version>1.0.12</ow2.jta.spec.version>
        <javax.inject.version>1</javax.inject.version>
        <jacoco.version>0.7.5.201505241946</jacoco.version>
        <commons.io.wso2.version>2.4.0.wso2v1</commons.io.wso2.version>
        <com.zaxxer.hikaricp.version>2.4.1</com.zaxxer.hikaricp.version>
        <com.h2database.h2.version>1.4.191</com.h2database.h2.version>

        <project.scm.id>my-scm-server</project.scm.id>
    </properties>

</project>